--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
   <meta charset="UTF-8">
   <title>My Social Profiles</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-    a { display: block; margin: 10px 0; font-size: 1.2em; color: #333; text-decoration: none; }
-    a:hover { color: #0077ff; }
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 50px;
+      background-image: url('YOUR_IMAGE_URL_HERE');
+      background-size: cover;       /* scales image to cover the screen */
+      background-position: center;  /* centers the image */
+      background-attachment: fixed; /* keeps background static when scrolling */
+    }
+    a {
+      display: block;
+      margin: 10px 0;
+      font-size: 1.2em;
+      color: #333;
+      text-decoration: none;
+    }
+    a:hover {
+      color: #0077ff;
+    }
   </style>
 </head>
 <body>
