--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       text-align: center;
       margin-top: 50px;
-      background-image: url('YOUR_IMAGE_URL_HERE');
+      background-image: url('https://github.com/LocketCM/Social-Media/blob/main/a%20cartoon-style%20lock.png');
       background-size: cover;       /* scales image to cover the screen */
       background-position: center;  /* centers the image */
       background-attachment: fixed; /* keeps background static when scrolling */
