--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     a {
       display: block;
       margin: 10px 0;
-      font-size: 1.2em;
-      color: #333;
+      font-size: 2em;
+      color: #Ffd700;
       text-decoration: none;
     }
     a:hover {
