--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
       background-attachment: fixed; /* keeps background static when scrolling */
     }
     a {
-      display: block;
-      margin: 10px 0;
-      font-size: 2em;
-      color: #Ffd700;
-      text-decoration: none;
+  display: block;
+  margin: 10px 0;
+  font-size: 2.5em;
+  color: #ffd700;       /* gold */
+  text-decoration: none;
+  text-align: center;   /* centers the text */
+}
     }
     a:hover {
       color: #0077ff;
