--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
       background-position: center;  /* centers the image */
       background-attachment: fixed; /* keeps background static when scrolling */
     }
-    a {
+ a {
   display: block;
   margin: 10px 0;
   font-size: 2.5em;
   color: #ffd700;       /* gold */
   text-decoration: none;
   text-align: center;   /* centers the text */
+  border: 2px solid black;  /* adds a black border */
+  padding: 10px;           /* adds space inside the border */
+}
 }
     }
     a:hover {
