--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
   display: block;
   margin: 10px 0;
   font-size: 2.5em;
-  color: #ffd700;       /* gold */
+  color: #ffd700;             /* gold text */
   text-decoration: none;
-  text-align: center;   /* centers the text */
-  border: 5px solid black;  /* adds a black border */
-  padding: 5px;           /* adds space inside the border */
+  text-align: center;         /* centers the text */
+  background-color: black;    /* solid black bubble */
+  border: 5px solid black;    /* matches the bubble edge */
+  padding: 15px;              /* space inside the bubble */
+  border-radius: 30px;        /* rounded corners for bubble look */
 }
 }
     }
