--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>My Social Profiles</title>
+  <link rel="stylesheet" href="Site.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       text-align: center;
-      margin-top: 50px;
+      margin-top: 100px;
       background-image: url('https://raw.githubusercontent.com/LocketCM/Social-Media/refs/heads/main/a%20cartoon-style%20lock.png');
       background-size: cover;       /* scales image to cover the screen */
       background-position: center;  /* centers the image */
@@ -17,23 +18,37 @@ a {
   display: inline-block;       /* only as wide as the text + padding */
   margin: 10px;                /* space around each bubble */
   font-size: 2.5em;
-  color: #ffd700;              /* gold text */
+  color: #a88f00;              /* gold text */
   text-decoration: none;
   text-align: center;
-  background-color: black;     /* solid black bubble */
+  background-color: rgb(255, 255, 255);     /* solid black bubble */
   border: 5px solid black;     /* matches the bubble edge */
   padding: 15px 25px;          /* space inside bubble (horizontal padding wider) */
   border-radius: 30px;         /* rounded corners for bubble look */
 }
-}
-    }
     a:hover {
       color: #0077ff;
     }
   </style>
 </head>
 <body>
-  <h1>Social Media</h1>
+  <style>
+    #FB {
+      display: inline-block;       /* only as wide as the text + padding */
+  margin: 10px;                /* space around each bubble */
+  font-size: 2.5em;
+  color: #a88f00;              /* gold text */
+  text-decoration: none;
+  text-align: center;
+  background-color: rgb(0, 0, 0);     /* solid black bubble */
+  border: 5px solid black;     /* matches the bubble edge */
+  padding: 15px 25px;          /* space inside bubble (horizontal padding wider) */
+  border-radius: 30px;         /* rounded corners for bubble look */
+    }
+  </style>
+  <div>
+  <h1 id="FB">Follow Below</h1>
+  </div>
   <a href="https://www.tiktok.com/@locketcm" target="_blank">TikTok</a>
   <a href="https://www.instagram.com/the_locket_cm/?__pwa=1" target="_blank">Instagram</a>
   <a href="https://www.youtube.com/@Locket_CM" target="_blank">YouTube</a>
